--- a/client/src/css/utilities.css
+++ b/client/src/css/utilities.css
@@ -89,20 +89,24 @@
 */
 .grid{
 	display: grid;
-	grid-gap: 1.4rem;
+	grid-gap: 1.6rem;
 }
 .grid.grid-1{
 	grid-template-columns: auto;
 }
 
 .grid.grid-2{
-	grid-template-columns: auto auto;
+	grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .grid.grid-3{
-	grid-template-columns: auto auto auto;
+	grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .grid.grid-4{
-	grid-template-columns: auto auto auto auto;
+	grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.grid .grid-item{
+	overflow: hidden;
 }
